--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,13 @@ edition = "2018"
 
 [dependencies]
 # windows = "0.11.0"
-winapi = { version = "0.3.9", default-features = false, features = ["wingdi", "libloaderapi", "winuser", "gl-gl"] }
 gleam = { version = "0.13.1", default-features = false }
 libc_alloc = { git = "https://github.com/daniel5151/libc_alloc" }
 
-# [build-dependencies]
-# windows = "0.11.0"
+[dependencies.winapi]
+version = "0.3.9"
+default-features = false
+features = ["libloaderapi", "errhandlingapi", "winuser", "uxtheme", "dwmapi", "winnt", "sysinfoapi", "wingdi"]
 
 [profile.dev]
 panic = "abort"
