--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 # windows = "0.11.0"
 gleam = { version = "0.13.1", default-features = false }
-libc_alloc = { git = "https://github.com/daniel5151/libc_alloc" }
+libc_alloc = { git = "https://github.com/daniel5151/libc_alloc", default-features = false }
 
 [dependencies.winapi]
 version = "0.3.9"
