--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2018"
 # build = "build.rs"
 
 [dependencies]
-# windows = "0.11.0"
-gleam = { version = "0.13.1", default-features = false }
+gleam = { version = "0.13.1", default-features = false, optional = true }
 libc_alloc = { git = "https://github.com/daniel5151/libc_alloc", default-features = false }
+compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins" }
 
 [dependencies.winapi]
 version = "0.3.9"
@@ -22,3 +22,7 @@ lto = true
 codegen-units = 1
 opt-level = "z"
 panic = 'abort'
+
+[features]
+default = ["std"]
+std = ["gleam"]
