--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 gleam = { version = "0.13.1", default-features = false, optional = true }
 libc_alloc = { git = "https://github.com/daniel5151/libc_alloc", default-features = false }
-compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins" }
+gl-context-loader = { path = "../gl-context-loader", default-features = false }
 
 [dependencies.winapi]
 version = "0.3.9"
